# docker

./: README.md  docker主进程配置.txt  loadJosnTest.py
centos7-docker-install/: addrepo-1.sh  device-mapper作为存储驱动  install-docker-1.9.1  registry-add  serach-docker-version.sh  start-docker.sh
docker-install-ubuntu/: install-docer-CE.txt
etcd-browser-nodejs/: build.sh  runDocker.sh
heat-k8s-plugin/: README.md  setup.cfg
heat-k8s-plugin/heat_contrib_kubernetes.egg-info/: SOURCES.txt
heat-k8s-plugin/heat_kubernetes/resources/: kubernetes_service.py
heat-k8s-plugin/script/: changeRC.py  changeRcname.sh  convertImage.sh  gen_conf.sh  gen_conf_test.sh  generator.py  listRS.sh  queryMyAddress.sh  readme  setLastTimeinternalID.py  testChangeRc.sh  testSetInternalID.sh
heat-k8s-plugin/script/run-k8s/: heat.json  yscheduler-rc.json  yscheduler-service.json
heat-kubernetes-plugin/: README.rst
heat-kubernetes-plugin/heat_contrib_kubernetes.egg-info/: PKG-INFO  pbr.json  requires.txt
heat-kubernetes-plugin/script/: gen_conf_k8s.sh  read_conf.py  setInternalID.sh  (+1 more)
paas/: profile.sh  readme
pipwork/: readme
redhat7/: docker-install
registry/: deleteDockerImage.py  docker_registry_check.sh  getImageFromK8s.py
scriptRun-heat-k8s/: listRS.sh  readme  runConfig-center.sh  runImage-server.sh  runVn.sh  start.sh
some-script/: docker_image_clean.sh  getImage.py  loadEnv.sh  queryPodLog.py  test.conf
study/: docker Registry  docker api.txt  docker.txt  dockerFile.txt  docker_registry删除.txt  docker中正确关闭java.txt  docker文件系统.txt  僵尸进程.txt  删除.txt  安装.txt  网络问题.txt
(+70 files in other folders)
