[metadata]
name = heat-contrib-kubernetes
summary = Heat resource for Kubernetes containers
description-file =
    README.md
author = Chieh.Chu
author-email = Chieh.Chu@hotmail.com
home-page = http://www.yeahmobi.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
# Copy to /usr/lib/heat for plugin loading
data_files =
    lib/heat/kubernetes = heat_kubernetes/resources/*

[global]
setup-hooks =
    pbr.hooks.setup_hook
